1.3beta2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Fixed issue #10803: format of ezcQueryExpressionMssql::now.

1.3beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #8240: ezcQueryExpression::in does not work with strings.
- Fixed issue #8520: The non trivial join methods have incomplete
  documentation.
- Fixed issue #9526: Implemented expression now() for each database handler.
- Fixed issue #10529: Tests for quoting of strings in query expressions.
- Implemented feature #7772: SQL Server implementation for the Database package.
  Based on contributions by Joel Arvidsson and Friedel Hill.
- Implemented feature #8473: Oracle Limit/Offset optimization.
- Implemented feature #8448: Select Distinct not supported
- Implemented feature #9960 [Database] sql abstraction.  Based on contributions by
  Joel Arvidsson and Friedel Hill.
- Implemented feature #9965: Support for delayed initialization through
  ezcBaseInit.


1.2 - Monday 18 December 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #9219: Added sql HAVING condition. Patch by Christian Michel.
- Fixed issue #9439: PersistentObject doesn't handle sequence value 
  generation right for Oracle.
- Fixed issue #9466: Oracle limit does not return $this.
- Fixed issue #9567: query->bindValue() sets value in query->boundParameters.
- Fixed issue #9841: Sqlite file DSN on Windows added an incorrect slash.
- Fixed ezcQueryExpressionOracle, corrected processing subString() in Oracle.


1.2beta2 - Monday 20 November 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added the ezcDatabase::getIdentifiers() method that returns a list of
  identifiers of the registered database instances.


1.2beta1 - Tuesday 24 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
